# PleaseHelp

./: .gitignore  .sourcery.yaml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_last_login_userprofile.py  0002_alter_user_options_alter_usertype_options_and_more.py  0002_alter_user_rating.py  0003_alter_user_options_user_address_user_avatar_and_more.py  0003_user_feedback_count.py
chat_messages_system/: apps.py  urls.py
feedback/: forms.py  models.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0002_alter_feedback_comment_alter_feedback_created_at_and_more.py  0003_alter_feedback_comment_alter_feedback_reviewed_and_more.py
main/: asgi.py  settings.py  urls.py  views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_additional_info_alter_order_status.py  0003_rename_price_order_client_price_order_vendor_price.py  0004_alter_order_difficulty_alter_order_status_and_more.py  0005_alter_orderdifficulty_options_and_more.py  0006_order_prefered_complete_date.py  0007_alter_order_additional_info_alter_order_location_and_more.py  0008_alter_order_options_alter_orderdifficulty_options_and_more.py  0009_rename_order_name_order_name_and_more.py  0010_remove_order_prefered_complete_date_and_more.py
static/css/: master.css  order_detail.css
static/js/: dark-mode.js  order_detail.js
templates/: base.html  error_page.html  index.html
(+10 files in other folders)
