[tool.poetry]
name = "PleaseHelp"
version = "0.1.0"
description = ""
authors = ["Andrew Gendy <andrewgendy9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
django-filter = "^23.2"
django-debug-toolbar = "^4.0.0"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.2.2"
social-auth-app-django = "^5.2.0"
setuptools = "^67.7.2"
django-widget-tweaks = "^1.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
